[Charlie 20191209] basic LSTM model

--- a/config/main.conf
+++ b/config/main.conf
@@ -1,9 +1,4 @@
 [path]
-preprocessing: ../config/proprocess.conf
+model: ../config/model.conf
 data_part: ../data
 vocab: ../config/genome_vocab.json
-
-x_train: ../data/preprocess/x_train.npz
-x_test: ../data/preprocess/x_test.npz
-y_train: ../data/preprocess/y_train.npz
-y_test: ../data/preprocess/y_test.npz
