run.sh shell for contact maps

--- a/config/contact_maps.conf
+++ b/config/contact_maps.conf
@@ -1,4 +1,4 @@
 [path]
-pdb_codes: ../data/contact_maps/pdb_list.txt
-pdb_dir: ../data/contact_maps/PDB Files
-contact_maps_dir: ../data/contact_maps/Contact Maps
+pdb_codes: ../../data/contact_maps/pdb_list.txt
+pdb_dir: ../../data/contact_maps/PDB Files
+contact_maps_dir: ../../data/contact_maps/Contact Maps
