[Charlie 03082020] Changed default attn to taking the last step

--- a/config/model.conf
+++ b/config/model.conf
@@ -5,7 +5,7 @@ MaxLen = 3000
 Debug = 1
 
 [Device]
-Gpu = 1
+Gpu = 0
 
 [Training]
 SampleEvery = 1
@@ -21,4 +21,5 @@ PaddingSize = 3000
 BatchSize = 256
 Learning_rate = 0.001
 NLayers = 3 
-NHeaders = 10
+NHeaders = 12
+NeedAttn = 0
