--- a/config/contact_maps.conf
+++ b/config/contact_maps.conf
@@ -1,4 +1,5 @@
 [path]
 pdb_codes: ../../data/contact_maps/pdb_list.txt
 pdb_dir: ../../data/contact_maps/PDB Files
-contact_maps_dir: ../../data/contact_maps/Contact Maps
+contact_maps_dir: ../../data/contact_maps/sparse_matrices
+sequence_dir: ../../data/contact_maps/pdb_sequences.json
