[Charlie 03312020] Merged Nick's GCN model and fixed a small problem at model.conf

--- a/config/main.conf
+++ b/config/main.conf
@@ -1,4 +1,4 @@
 [path]
-model: ../../config/model.conf
-data_part: ../../data
-vocab: ../../config/genome_vocab.json
+model: ../../../config/model.conf
+data_part: ../../../data
+vocab: ../../../config/genome_vocab.json
