[Charlie 11042020] Applied stacked self-attention

--- a/config/model.conf
+++ b/config/model.conf
@@ -21,6 +21,6 @@ NumOfFolds = 10
 PaddingSize = 3000
 BatchSize = 128
 Learning_rate = 0.001
-NLayers = 2
+NLSTM = 2
 NHeaders = 16
-NeedAttn = 1
+NAttn = 2
