[Charlie 12042020] Used SGD and added more layers of self attention

--- a/config/model.conf
+++ b/config/model.conf
@@ -11,7 +11,8 @@ Gpu = 1
 [Training]
 SampleEvery = 1
 Reload = None
-Epochs = 2
+Epochs = 10
+NoIters = 1500
 TestRate = 0.2
 
 [Params]
@@ -21,6 +22,6 @@ NumOfFolds = 10
 PaddingSize = 3000
 BatchSize = 128
 Learning_rate = 0.001
-NLSTM = 2
+NLSTM = 1
 NHeaders = 16
-NAttn = 2
+NAttn = 12
