[Charlie 12042020] Ready for experiments on the positional encoding v.s. LSTM

--- a/config/model.conf
+++ b/config/model.conf
@@ -11,7 +11,7 @@ Gpu = 1
 [Training]
 SampleEvery = 1
 Reload = None
-Epochs = 15
+Epochs = 20
 NoIters = 1000
 TestRate = 0.2
 
@@ -22,6 +22,7 @@ NumOfFolds = 10
 PaddingSize = 3000
 BatchSize = 128
 Learning_rate = 0.001
-NLSTM = 0
+NLSTM = 1
 NHeaders = 16
 NAttn = 24
+NeedPosEnc = 0
