[Charlie 12042020] refacted testing logic

--- a/config/model.conf
+++ b/config/model.conf
@@ -22,7 +22,13 @@ NumOfFolds = 10
 PaddingSize = 3000
 BatchSize = 128
 Learning_rate = 0.001
-NLSTM = 1
+NLSTM = 0
 NHeaders = 16
 NAttn = 24
-NeedPosEnc = 0
+NeedPosEnc = 1
+
+[Test]
+FoldSize=500
+NoTest=40
+NoValid=10
+NoTrain=10
