--- a/config/model.conf
+++ b/config/model.conf
@@ -14,6 +14,8 @@ Reload = None
 Epochs = 20
 NoIters = 1000
 TestRate = 0.2
+EarlyStop = 0.8
+MaxNorm = 5
 
 [Params]
 EmbDim = 80
@@ -24,7 +26,7 @@ BatchSize = 128
 Learning_rate = 0.001
 NLSTM = 1
 NHeaders = 16
-NAttn = 0
+NAttn = 1
 NeedPosEnc = 0
 
 [Test]
