[Charlie 20042020] Ready for experiments

--- a/config/model.conf
+++ b/config/model.conf
@@ -11,11 +11,12 @@ Gpu = 1
 [Training]
 SampleEvery = 1
 Reload = None
-Epochs = 20
+Epochs = 19
 NoIters = 1000
 TestRate = 0.2
-EarlyStop = 0.8
-MaxNorm = 5
+EarlyStop = 0.0
+InitMaxNorm = 5
+MaxNormDecay = 1.5
 
 [Params]
 EmbDim = 80
@@ -24,13 +25,13 @@ NumOfFolds = 10
 PaddingSize = 3000
 BatchSize = 128
 Learning_rate = 0.001
-NLSTM = 1
+NLSTM = 2
 NHeaders = 16
-NAttn = 1
+NAttn = 24
 NeedPosEnc = 0
 
 [Test]
 FoldSize=500
 NoTest=40
-NoValid=5
-NoTrain=5
+NoValid=1
+NoTrain=1
