--- a/config/gcn.conf
+++ b/config/gcn.conf
@@ -6,8 +6,13 @@ sequence_dict: ../../../data/contact_maps/pdb_sequences.json
 csv_file: ../../../data/GO/pdb_chain_go.csv
 vocab: ../../../config/genome_vocab.json
 gcn_data: ../../../data/gcn
-lm: ../../../Nick/model_LSTM_2_epoch_2_full-attn
-model:
+lm: ../../../data/pretrained_lm_models/cluster_1lstm_0posenc_24selfattn.model.0
+figures: ../../../data/gcn/plots/
+models: ../../../data/gcn/models/
 
 [go]
 obo_url: http://purl.obolibrary.org/obo/go/go-basic.obo
+
+[model]
+model: GCN
+num_trials = 5
