[Charlie 04292020] Added masked language model and fixed checkpoint problem

--- a/config/model.conf
+++ b/config/model.conf
@@ -10,24 +10,26 @@ Gpu = 1
 [Training]
 SampleEvery = 1
 Reload = None
-Epochs = 25
+Epochs = 42
 NoIters = 1000
 TestRate = 0.2
 EarlyStop = 0.0
-InitMaxNorm = 5
+InitMaxNorm = 0
 MaxNormDecay = 1.5
 
 [Params]
 EmbDim = 80
 HidDim = 200
 NumOfFolds = 10
-PaddingSize = 2866
+PaddingSize = 3000
 BatchSize = 128
 Learning_rate = 0.001
-NLSTM = 2
+NLSTM = 1
 NHeaders = 16
 NAttn = 24
-NeedPosEnc = 0
+NeedPosEnc = 1
+MlmFlag = 1
+MaskRatio = 0.005
 
 [Test]
 FoldSize=500
