[Charlie 04302020] Weighted MLM and CLS loss, ready for testing

--- a/config/model.conf
+++ b/config/model.conf
@@ -10,11 +10,11 @@ Gpu = 1
 [Training]
 SampleEvery = 1
 Reload = None
-Epochs = 42
+Epochs = 30
 NoIters = 1000
 TestRate = 0.2
 EarlyStop = 0.0
-InitMaxNorm = 0
+InitMaxNorm = 10
 MaxNormDecay = 1.5
 
 [Params]
@@ -28,8 +28,9 @@ NLSTM = 1
 NHeaders = 16
 NAttn = 24
 NeedPosEnc = 1
-MlmFlag = 1
-MaskRatio = 0.005
+MlmWeight = 0.95
+ClsWeight = 0.05
+MaskRatio = 0.02
 
 [Test]
 FoldSize=500
