redesigned pipeline with snap data

--- a/config/contact_maps.conf
+++ b/config/contact_maps.conf
@@ -1,5 +1,7 @@
 [path]
-pdb_codes: ../../data/contact_maps/pdb_list.txt
+pdb_codes: ../../data/contact_maps/snap_pdb_list.txt
 pdb_dir: ../../data/contact_maps/PDB Files
-contact_maps_dir: ../../data/contact_maps/sparse_matrices
-sequence_dir: ../../data/contact_maps/pdb_sequences.json
+contact_maps_dir: ../../data/contact_maps/snap_sparse_matrices
+sequence_dir: ../../data/contact_maps/snap_pdb_sequences.json
+snap_dir: ../../data/snap/dataset/supervised/node-labels
+ensembl: ../../data/snap/pdb_chain_ensembl.csv.gz
