--- a/config/gcn.conf
+++ b/config/gcn.conf
@@ -1,14 +1,14 @@
 [path]
-pdb_codes: ../../../data/contact_maps/pdb_list.txt
+pdb_codes: ../../../Nick/snap_pdb_list.txt
 pdb_dir: ../../../data/contact_maps/PDB Files
-contact_maps_dir: ../../../data/contact_maps/sparse_matrices
-sequence_dict: ../../../data/contact_maps/pdb_sequences.json
+contact_maps_dir: ../../../data/contact_maps/snap_sparse_matrices
+sequence_dir: ../../../data/contact_maps/snap_pdb_sequences.json
 csv_file: ../../../data/GO/pdb_chain_go.csv
 vocab: ../../../config/genome_vocab.json
 gcn_data: ../../../data/gcn
-lm: ../../../data/pretrained_lm_models/cluster_1lstm_0posenc_24selfattn.model.0
+lm:../../../data/pretrained_lm_models/final_models/cluster_1lstm_1posenc_24selfattn.model.0
 figures: ../../../data/gcn/plots/
-models: ../../../data/gcn/models/
+models: ../../../data/gcn/gcn_models/
 
 [go]
 obo_url: http://purl.obolibrary.org/obo/go/go-basic.obo
