--- a/src/contact_map/contact_map_env.yml
+++ b/src/contact_map/contact_map_env.yml
@@ -6,7 +6,7 @@ dependencies:
   - biopython=1.74=py37h7b6447c_0
   - blas=1.0=mkl
   - ca-certificates=2020.1.1=0
-  - certifi=2019.11.28=py37_0
+  - certifi=2020.4.5.2=py37_0
   - intel-openmp=2019.4=243
   - ld_impl_linux-64=2.33.1=h53a641e_7
   - libedit=3.1.20181209=hc058e9b_0
@@ -23,9 +23,12 @@ dependencies:
   - numba=0.48.0=py37h0573a6f_0
   - numpy=1.18.1=py37h4f9e942_0
   - numpy-base=1.18.1=py37hde5b4d6_1
-  - openssl=1.1.1d=h7b6447c_3
+  - openssl=1.1.1g=h7b6447c_0
+  - pandas=1.0.4=py37h0573a6f_0
   - pip=20.0.2=py37_1
   - python=3.7.6=h0371630_2
+  - python-dateutil=2.8.1=py_0
+  - pytz=2020.1=py_0
   - readline=7.0=h7b6447c_5
   - scipy=1.4.1=py37h0b6359f_0
   - setuptools=45.1.0=py37_0
@@ -36,4 +39,5 @@ dependencies:
   - wheel=0.34.2=py37_0
   - xz=5.2.4=h14c3975_4
   - zlib=1.2.11=h7b6447c_3
+prefix: /global/homes/n/nswenson/.conda/envs/contact_map_env
 
