--- a/config/contact_maps.conf
+++ b/config/contact_maps.conf
@@ -1,7 +1,7 @@
 [path]
-pdb_codes: ../../data/contact_maps/snap_pdb_list.txt
-pdb_dir: ../../data/contact_maps/PDB Files
-contact_maps_dir: ../../data/contact_maps/snap_sparse_matrices
-sequence_dir: ../../data/contact_maps/snap_pdb_sequences.json
+pdb_codes: ../../data/flatiron/nrPDB-GO_2019.06.18_test.txt
+pdb_dir: ../../data/flatiron/pdb
+contact_maps_dir: ../../data/flatiron/test_maps
+sequence_dir: ../../data/flatiron/test.json
 snap_dir: ../../data/snap/dataset/supervised/node-labels
 ensembl: ../../data/snap/pdb_chain_ensembl.csv.gz
