--- a/config/gcn.conf
+++ b/config/gcn.conf
@@ -1,12 +1,12 @@
 [path]
-pdb_codes: ../../../Nick/snap_pdb_list.txt
-pdb_dir: ../../../data/contact_maps/PDB Files
-contact_maps_dir: ../../../data/contact_maps/snap_sparse_matrices
-sequence_dir: ../../../data/contact_maps/snap_pdb_sequences.json
+pdb_codes: ../../../data/flatiron/nrPDB-GO_2019.06.18_test.txt
+pdb_dir: ../../../data/flatiron/pdb
+contact_maps_dir: ../../../data/flatiron/test_maps
+sequence_dir: ../../../data/flatiron/test.json
 csv_file: ../../../data/GO/pdb_chain_go.csv
 vocab: ../../../config/genome_vocab.json
 gcn_data: ../../../data/gcn
-lm:../../../data/pretrained_lm_models/final_models/cluster_1lstm_1posenc_24selfattn.model.0
+lm:../../../data/pretrained_lm_models/mlm_checkpoint_90
 figures: ../../../data/gcn/plots/
 models: ../../../data/gcn/gcn_models/
 
